--- a/news.html
+++ b/news.html
@@ -38,27 +38,27 @@
                             <a href="javascript:;" class="menu__link">Thị trường</a>
                             <ul class="sub__menu">
                                 <li class="menu__item">
-                                    <a href="" class="menu__link">
+                                    <a href="./news.html" class="menu__link">
                                         Thị trường vàng
                                     </a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="" class="menu__link">
+                                    <a href="./news.html" class="menu__link">
                                         Nông nghiệp
                                     </a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="" class="menu__link">
+                                    <a href="./news.html" class="menu__link">
                                         Tiền mã hóa
                                     </a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="" class="menu__link">
+                                    <a href="./news.html" class="menu__link">
                                         Xăng dầu
                                     </a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="" class="menu__link">
+                                    <a href="./news.html" class="menu__link">
                                         Tài chính
                                     </a>
                                 </li>
@@ -80,9 +80,6 @@
                             <a href="javascript:;" class="menu__link">Chứng khoán</a>
                         </li>
                         <li class="menu__item">
-                            <a href="./news.html" class="menu__link">Tin tức</a>
-                        </li>
-                        <li class="menu__item">
                             <a href="./video.html" class="menu__link">Video</a>
                         </li>
                         <li class="menu__item">
@@ -100,14 +97,66 @@
                 <div class="container p-0">
                     <div class="header-wrap">
                         <div class="header__left-meta">
-                            <a href="" class="link-back">
-                                <i class="fa-regular fa-arrow-left"></i>
-                            </a>
-                            <span>
-                                Tin tức
-                            </span>
+                            <ul class="menu">
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Thị trường</a>
+                                    <ul class="sub__menu">
+                                        <li class="menu__item">
+                                            <a href="./news.html" class="menu__link">
+                                                Thị trường vàng
+                                            </a>
+                                        </li>
+                                        <li class="menu__item">
+                                            <a href="./news.html" class="menu__link">
+                                                Nông nghiệp
+                                            </a>
+                                        </li>
+                                        <li class="menu__item">
+                                            <a href="./news.html" class="menu__link">
+                                                Tiền mã hóa
+                                            </a>
+                                        </li>
+                                        <li class="menu__item">
+                                            <a href="./news.html" class="menu__link">
+                                                Xăng dầu
+                                            </a>
+                                        </li>
+                                        <li class="menu__item">
+                                            <a href="./news.html" class="menu__link">
+                                                Tài chính
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Kinh doanh</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Đầu tư</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Công nghệ</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Quốc tế</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Chứng khoán</a>
+                                </li>
+
+                            </ul>
                         </div>
                         <ul class="header__inner">
+                            <li>
+                                <a href="./video.html">
+                                    <i class="fa-solid fa-video"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="./photo.html">
+                                    <i class="fa-regular fa-image"></i>
+                                </a>
+                            </li>
                             <li class="header__inner-search">
                                 <a href="javascript:;" class="toggle-search">
                                     <i class="fa-solid fa-magnifying-glass"></i>
@@ -143,9 +192,17 @@
             <main class="main">
                 <section class="news">
                     <div class="container news__inner">
-                        <div class="news-hot">
+                        <div class="section-title">
+                            <span class="subtitle">
+                                thị trường
+                            </span>
+                            <h2 class="sectitle">
+                                thị trường vàng
+                            </h2>
+                        </div>
+                        <div class="news-hot d-none">
                             <div class="news-hot__list">
-                                <div class="news-hot__item">
+                                <div class="news-hot__item wow fadeInUp">
                                     <figure class="images">
                                         <a href="./news-detail.html">
                                             <img src="./images/hot-new3.png" alt="">
@@ -167,7 +224,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="news-hot__item">
+                                <div class="news-hot__item wow fadeInUp">
                                     <figure class="images">
                                         <a href="./news-detail.html">
                                             <img src="./images/hot-new3.png" alt="">
@@ -189,7 +246,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="news-hot__item">
+                                <div class="news-hot__item wow fadeInUp">
                                     <figure class="images">
                                         <a href="./news-detail.html">
                                             <img src="./images/hot-new3.png" alt="">
@@ -219,7 +276,7 @@
                             <div class="row">
                                 <div class="col-xl-9">
                                     <div class="news-list__inner">
-                                        <div class="news-list__menu">
+                                        <div class="news-list__menu d-none">
                                             <span class="news-list__menu-title">Tin mới nhất</span>
                                             <ul class="news-list__menu-main">
                                                 <li class="active">
@@ -247,8 +304,8 @@
                                         </div>
                                         <div class="news-list__gap">
                                             <div class="row">
-                                                <div class="col-lg-4 col-md-6">
-                                                    <div class="news-list__item">
+                                                <div class="col-lg-8 col-md-6 column-item">
+                                                    <div class="news-list__item wow fadeInUp">
                                                         <figure class="images">
                                                             <a href="./news-detail.html">
                                                                 <img src="./images/new (1).png" alt="">
@@ -267,14 +324,13 @@
                                                                 # Tin Kinh doanh
                                                             </div>
                                                             <div class="time">
-                                                                <strong>17</strong>
-                                                                <span>08-2022</span>
+                                                                27/07/2022
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col-lg-4 col-md-6">
-                                                    <div class="news-list__item">
+                                                <div class="col-lg-4 col-md-6 column-item">
+                                                    <div class="news-list__item wow fadeInUp">
                                                         <figure class="images">
                                                             <a href="./news-detail.html">
                                                                 <img src="./images/new (1).png" alt="">
@@ -293,14 +349,13 @@
                                                                 # Tin Kinh doanh
                                                             </div>
                                                             <div class="time">
-                                                                <strong>17</strong>
-                                                                <span>08-2022</span>
+                                                                27/07/2022
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col-lg-4 col-md-6">
-                                                    <div class="news-list__item">
+                                                <div class="col-lg-4 col-md-6 column-item">
+                                                    <div class="news-list__item wow fadeInUp">
                                                         <figure class="images">
                                                             <a href="./news-detail.html">
                                                                 <img src="./images/new (1).png" alt="">
@@ -319,14 +374,13 @@
                                                                 # Tin Kinh doanh
                                                             </div>
                                                             <div class="time">
-                                                                <strong>17</strong>
-                                                                <span>08-2022</span>
+                                                                27/07/2022
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col-lg-4 col-md-6">
-                                                    <div class="news-list__item">
+                                                <div class="col-lg-4 col-md-6 column-item">
+                                                    <div class="news-list__item wow fadeInUp">
                                                         <figure class="images">
                                                             <a href="./news-detail.html">
                                                                 <img src="./images/new (1).png" alt="">
@@ -345,14 +399,13 @@
                                                                 # Tin Kinh doanh
                                                             </div>
                                                             <div class="time">
-                                                                <strong>17</strong>
-                                                                <span>08-2022</span>
+                                                                27/07/2022
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col-lg-4 col-md-6">
-                                                    <div class="news-list__item">
+                                                <div class="col-lg-4 col-md-6 column-item">
+                                                    <div class="news-list__item wow fadeInUp">
                                                         <figure class="images">
                                                             <a href="./news-detail.html">
                                                                 <img src="./images/new (1).png" alt="">
@@ -371,14 +424,13 @@
                                                                 # Tin Kinh doanh
                                                             </div>
                                                             <div class="time">
-                                                                <strong>17</strong>
-                                                                <span>08-2022</span>
+                                                                27/07/2022
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col-lg-4 col-md-6">
-                                                    <div class="news-list__item">
+                                                <div class="col-lg-4 col-md-6 column-item">
+                                                    <div class="news-list__item wow fadeInUp">
                                                         <figure class="images">
                                                             <a href="./news-detail.html">
                                                                 <img src="./images/new (1).png" alt="">
@@ -397,8 +449,32 @@
                                                                 # Tin Kinh doanh
                                                             </div>
                                                             <div class="time">
-                                                                <strong>17</strong>
-                                                                <span>08-2022</span>
+                                                                27/07/2022
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-4 col-md-6 column-item">
+                                                    <div class="news-list__item wow fadeInUp">
+                                                        <figure class="images">
+                                                            <a href="./news-detail.html">
+                                                                <img src="./images/new (1).png" alt="">
+                                                            </a>
+                                                        </figure>
+                                                        <div class="desc">
+                                                            <div class="title">
+                                                                <a href="./news-detail.html">
+                                                                    Đo độ dày lớp AU và NIP (ENIG) trên PCB theo tiêu chuẩn IPC-4552A
+                                                                </a>
+                                                            </div>
+                                                            <div class="content">
+                                                                Sự phát triển của thiết bị điện tử trong mọi lĩnh vực đời sống xã hội đòi hỏi các nhà sản xuất bo ....
+                                                            </div>
+                                                            <div class="tab-meta">
+                                                                # Tin Kinh doanh
+                                                            </div>
+                                                            <div class="time">
+                                                                27/07/2022
                                                             </div>
                                                         </div>
                                                     </div>
