--- a/photo.html
+++ b/photo.html
@@ -38,27 +38,27 @@
                             <a href="javascript:;" class="menu__link">Thị trường</a>
                             <ul class="sub__menu">
                                 <li class="menu__item">
-                                    <a href="" class="menu__link">
+                                    <a href="./news.html" class="menu__link">
                                         Thị trường vàng
                                     </a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="" class="menu__link">
+                                    <a href="./news.html" class="menu__link">
                                         Nông nghiệp
                                     </a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="" class="menu__link">
+                                    <a href="./news.html" class="menu__link">
                                         Tiền mã hóa
                                     </a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="" class="menu__link">
+                                    <a href="./news.html" class="menu__link">
                                         Xăng dầu
                                     </a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="" class="menu__link">
+                                    <a href="./news.html" class="menu__link">
                                         Tài chính
                                     </a>
                                 </li>
@@ -80,9 +80,6 @@
                             <a href="javascript:;" class="menu__link">Chứng khoán</a>
                         </li>
                         <li class="menu__item">
-                            <a href="./news.html" class="menu__link">Tin tức</a>
-                        </li>
-                        <li class="menu__item">
                             <a href="./video.html" class="menu__link">Video</a>
                         </li>
                         <li class="menu__item">
@@ -100,14 +97,66 @@
                 <div class="container p-0">
                     <div class="header-wrap">
                         <div class="header__left-meta">
-                            <a href="" class="link-back">
-                                <i class="fa-regular fa-arrow-left"></i>
-                            </a>
-                            <span>
-                                Hình ảnh
-                            </span>
+                            <ul class="menu">
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Thị trường</a>
+                                    <ul class="sub__menu">
+                                        <li class="menu__item">
+                                            <a href="./news.html" class="menu__link">
+                                                Thị trường vàng
+                                            </a>
+                                        </li>
+                                        <li class="menu__item">
+                                            <a href="./news.html" class="menu__link">
+                                                Nông nghiệp
+                                            </a>
+                                        </li>
+                                        <li class="menu__item">
+                                            <a href="./news.html" class="menu__link">
+                                                Tiền mã hóa
+                                            </a>
+                                        </li>
+                                        <li class="menu__item">
+                                            <a href="./news.html" class="menu__link">
+                                                Xăng dầu
+                                            </a>
+                                        </li>
+                                        <li class="menu__item">
+                                            <a href="./news.html" class="menu__link">
+                                                Tài chính
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Kinh doanh</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Đầu tư</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Công nghệ</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Quốc tế</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Chứng khoán</a>
+                                </li>
+
+                            </ul>
                         </div>
                         <ul class="header__inner">
+                            <li>
+                                <a href="./video.html">
+                                    <i class="fa-solid fa-video"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="./photo.html">
+                                    <i class="fa-regular fa-image"></i>
+                                </a>
+                            </li>
                             <li class="header__inner-search">
                                 <a href="javascript:;" class="toggle-search">
                                     <i class="fa-solid fa-magnifying-glass"></i>
@@ -143,9 +192,17 @@
             <main class="main">
                 <section class="photo">
                     <div class="container">
+                        <div class="section-title">
+                            <!-- <span class="subtitle">
+                                thị trường
+                            </span> -->
+                            <h2 class="sectitle">
+                                photo
+                            </h2>
+                        </div>
                         <div class="row">
                             <div class="col-xl-3 col-lg-4 col-md-6">
-                                <div class="photo__item">
+                                <div class="photo__item wow fadeInUp">
                                     <figure class="images">
                                         <a href="./photo-detail.html">
                                             <img src="./images/image 28.png" alt="">
@@ -159,7 +216,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-3 col-lg-4 col-md-6">
-                                <div class="photo__item">
+                                <div class="photo__item wow fadeInUp">
                                     <figure class="images">
                                         <a href="./photo-detail.html">
                                             <img src="./images/image 29.png" alt="">
@@ -173,7 +230,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-3 col-lg-4 col-md-6">
-                                <div class="photo__item">
+                                <div class="photo__item wow fadeInUp">
                                     <figure class="images">
                                         <a href="./photo-detail.html">
                                             <img src="./images/image 31.png" alt="">
@@ -187,7 +244,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-3 col-lg-4 col-md-6">
-                                <div class="photo__item">
+                                <div class="photo__item wow fadeInUp">
                                     <figure class="images">
                                         <a href="./photo-detail.html">
                                             <img src="./images/image 28.png" alt="">
@@ -201,7 +258,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-3 col-lg-4 col-md-6">
-                                <div class="photo__item">
+                                <div class="photo__item wow fadeInUp">
                                     <figure class="images">
                                         <a href="./photo-detail.html">
                                             <img src="./images/image 29.png" alt="">
@@ -215,7 +272,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-3 col-lg-4 col-md-6">
-                                <div class="photo__item">
+                                <div class="photo__item wow fadeInUp">
                                     <figure class="images">
                                         <a href="./photo-detail.html">
                                             <img src="./images/image 31.png" alt="">
@@ -229,7 +286,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-3 col-lg-4 col-md-6">
-                                <div class="photo__item">
+                                <div class="photo__item wow fadeInUp">
                                     <figure class="images">
                                         <a href="./photo-detail.html">
                                             <img src="./images/image 31.png" alt="">
@@ -243,7 +300,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-3 col-lg-4 col-md-6">
-                                <div class="photo__item">
+                                <div class="photo__item wow fadeInUp">
                                     <figure class="images">
                                         <a href="./photo-detail.html">
                                             <img src="./images/image 31.png" alt="">
