--- a/photo-detail.html
+++ b/photo-detail.html
@@ -38,27 +38,27 @@
                             <a href="javascript:;" class="menu__link">Thị trường</a>
                             <ul class="sub__menu">
                                 <li class="menu__item">
-                                    <a href="" class="menu__link">
+                                    <a href="./news.html" class="menu__link">
                                         Thị trường vàng
                                     </a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="" class="menu__link">
+                                    <a href="./news.html" class="menu__link">
                                         Nông nghiệp
                                     </a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="" class="menu__link">
+                                    <a href="./news.html" class="menu__link">
                                         Tiền mã hóa
                                     </a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="" class="menu__link">
+                                    <a href="./news.html" class="menu__link">
                                         Xăng dầu
                                     </a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="" class="menu__link">
+                                    <a href="./news.html" class="menu__link">
                                         Tài chính
                                     </a>
                                 </li>
@@ -80,9 +80,6 @@
                             <a href="javascript:;" class="menu__link">Chứng khoán</a>
                         </li>
                         <li class="menu__item">
-                            <a href="./news.html" class="menu__link">Tin tức</a>
-                        </li>
-                        <li class="menu__item">
                             <a href="./video.html" class="menu__link">Video</a>
                         </li>
                         <li class="menu__item">
@@ -100,14 +97,66 @@
                 <div class="container p-0">
                     <div class="header-wrap">
                         <div class="header__left-meta">
-                            <a href="" class="link-back">
-                                <i class="fa-regular fa-arrow-left"></i>
-                            </a>
-                            <span>
-                                Hình ảnh/Album 1
-                            </span>
+                            <ul class="menu">
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Thị trường</a>
+                                    <ul class="sub__menu">
+                                        <li class="menu__item">
+                                            <a href="./news.html" class="menu__link">
+                                                Thị trường vàng
+                                            </a>
+                                        </li>
+                                        <li class="menu__item">
+                                            <a href="./news.html" class="menu__link">
+                                                Nông nghiệp
+                                            </a>
+                                        </li>
+                                        <li class="menu__item">
+                                            <a href="./news.html" class="menu__link">
+                                                Tiền mã hóa
+                                            </a>
+                                        </li>
+                                        <li class="menu__item">
+                                            <a href="./news.html" class="menu__link">
+                                                Xăng dầu
+                                            </a>
+                                        </li>
+                                        <li class="menu__item">
+                                            <a href="./news.html" class="menu__link">
+                                                Tài chính
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Kinh doanh</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Đầu tư</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Công nghệ</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Quốc tế</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="javascript:;" class="menu__link">Chứng khoán</a>
+                                </li>
+
+                            </ul>
                         </div>
                         <ul class="header__inner">
+                            <li>
+                                <a href="./video.html">
+                                    <i class="fa-solid fa-video"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="./photo.html">
+                                    <i class="fa-regular fa-image"></i>
+                                </a>
+                            </li>
                             <li class="header__inner-search">
                                 <a href="javascript:;" class="toggle-search">
                                     <i class="fa-solid fa-magnifying-glass"></i>
@@ -143,6 +192,14 @@
             <main class="main">
                 <section class="photo-detail">
                     <div class="container">
+                        <div class="section-title">
+                            <span class="subtitle">
+                                photo
+                            </span>
+                            <h2 class="sectitle">
+                                album 1
+                            </h2>
+                        </div>
                         <div class="photo-detail__group row">
                             <div class="col-xl-4 col-lg-3 col-md-4 col-sm-6 item">
                                 <figure class="images">
