--- a/news.html
+++ b/news.html
@@ -659,10 +659,15 @@
                         </p>
                         <div class="lang">
                             <i class="fa-solid fa-globe"></i>
-                            <select name="" id="">
-                                <option value="">Viet Nam</option>
-                                <option value="">English</option>
-                            </select>
+                            <div class="dropdown">
+                                <button onclick="myFunction()" class="dropbtn">
+                                    Viet Nam <i class="fa-solid fa-angle-down"></i>
+                                </button>
+                                <div id="myDropdown" class="dropdown-content">
+                                    <a href="#">Viet Nam</a>
+                                    <a href="#">English</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
